# cdk-ldk-node

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  config.toml.example  justfile  rustfmt.toml
.github/workflows/: ci.yml
misc/: start_node.sh
src/: lib.rs
src/config/: mod.rs
src/proto/: cdk_ldk_management.proto  client.rs  mod.rs  server.rs
src/utils/: mod.rs
