[package]
name = "cdk-ldk-node"
version = "0.1.0"
edition = "2024"

[lib]
name = "cdk_ldk_node"
path = "src/lib.rs"

[[bin]]
name = "cdk-ldk-node"
path = "src/bin/cdk-ldk-node.rs"

[[bin]]
name = "cdk-ldk-cli"
path = "src/bin/cdk-ldk-cli.rs"

[dependencies]
ldk-node = { version = "0.4.3", features = ["uniffi"] }
cdk-payment-processor = { git = "https://github.com/thesimplekid/cdk", branch = "update_bolt12" }
cdk-common = { git = "https://github.com/thesimplekid/cdk", branch = "update_bolt12", features = ["mint"] }
serde_json = "1.0.139"
serde = "1.0.218"
async-trait = "0.1.86"
futures = "0.3.31"
anyhow = "1.0.96"
tokio = "1.43.0"
clap = { version = "4.5.31", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio-util = "0.7.13"
tokio-stream = "0.1.17"
tonic = { version = "0.9", features = [
    "channel",
    "tls",
    "tls-webpki-roots",
] }
prost = "0.11.0"

[build-dependencies]
tonic-build = "0.9"

